--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.P_One">
+        android:theme="@style/Theme.P_One"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
+        <activity
+            android:name=".EditCrud.listcrudRoles"
+            android:exported="false" />
+        <activity
+            android:name=".EditCrud.listcrudCurso"
+            android:exported="false" />
         <activity
             android:name=".EditCrud.listcrudProfesor"
             android:exported="false" />
